Fixing contrast with yellow text on white

--- a/pantheon-theme/styles/screen-16x10.css
+++ b/pantheon-theme/styles/screen-16x10.css
@@ -271,14 +271,14 @@ a {
 }
 
 .slide a {
-    color: #EFCF1C;
+    color: #bba31b;
 su
 }
 
 .slide b,
 .slide strong {
     font-weight: 700;
-    color: #EFD01B;
+    color: #bba31b;
 }
 
 .slide blockquote,
